Fixing bug with Yaml not wrapping correctly in Firefox/Safari

--- a/client/src/scss/elements/textarea.scss
+++ b/client/src/scss/elements/textarea.scss
@@ -1,6 +1,6 @@
 
 textarea {
-    white-space: nowrap;
+    white-space: pre;
 	color: $color-font;
 	background: transparent;
 	padding: .25rem 0;
